Add boilerplates for services
