# src/database/types/user.type.ts
@@ -1,0 +1,6 @@
+export interface IUser {
+  id: string;
+  firstName: string;
+  lastName: string;
+  username: string;
+}
